# tf-bindgen

./: .editorconfig  .gitignore  Cargo.toml  Jenkinsfile  LICENSE  README.md  package.json
.github/workflows/: mdbook.yml
.husky/: pre-commit
.jenkins/: pod.yaml
book/: book.toml
book/src/: SUMMARY.md  bindings.md  complex.md  constructs.md  conventions.md  examples.md  getting_started.md  introduction.md  pre_generated_bindings.md  setup.md
book/src/advanced/: generation.md  improving_compile_duration.md
book/src/development/: structure.md
book/src/getting_started/: generate.md  helpers.md  resource.md
codegen/: Cargo.toml
codegen/src/: construct.rs  lib.rs  resource.rs  struct_info.rs
core/: Cargo.toml
core/src/: app.rs  construct.rs  lib.rs  stack.rs
crates/cli/: Cargo.toml
crates/cli/src/: deploy.rs  init.rs  lib.rs  validate.rs
crates/codegen/: Cargo.toml
crates/codegen/src/: construct.rs  lib.rs  resource.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs  path.rs  stack.rs
crates/schema/: Cargo.toml
crates/schema/src/: document.rs
crates/schema/src/provider/: mod.rs
examples/: construct.rs
examples/kubernetes/: Cargo.toml  build.rs  terraform.toml
examples/kubernetes/src/: lib.rs
schema/: Cargo.toml
schema/src/: document.rs  lib.rs
schema/src/provider/: attribute.rs  mod.rs  v1_0.rs
src/: app.rs  builder.rs  config.rs  construct.rs  dependency.rs  lib.rs  macros.rs  stack.rs  value.rs  version.rs
src/codegen/: field_info.rs  generator.rs  mod.rs  path.rs  struct_info.rs  type_info.rs
src/generator/: mod.rs  rust.rs  schema.rs  terraform.rs
src/generator/rust/: block.rs  field.rs  module.rs  struct.rs
src/model/: config.rs  document.rs  mod.rs
src/model/provider/: attribute.rs  mod.rs
src/value/: cell.rs  mod.rs  prelude.rs  prepare.rs
