[package]
name = "tf-bindgen"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
	"crates/schema",
	"crates/codegen",
	"crates/cli",
	"crates/core"
]

[dependencies]
anyhow = "1.0.69"
tf-cli = { path = "crates/cli", version = "0.1.0" }
tf-codegen = { path = "crates/codegen", version = "0.1.0" }
tf-core = { path = "crates/core", version = "0.1.0" }
heck = "0.4.1"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.95"
toml = "0.7.2"
tf-schema = { path = "crates/schema", version = "0.1.0" }
semver = "1.0.16"
itertools = "0.10.5"
derive_builder = "0.12.0"
