[package]
name = "terraform-bindgen-core"
version = "0.1.0"
edition = "2021"
description = "Traits and structs utilized by terraform-bindgen generated structures"

[dependencies]
derive_builder = "0.12.0"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
terraform-schema = { path="../schema", version="0.1.0" }
terraform-bindgen-codegen = { path="../codegen", version="0.1.0" }
anyhow = "1.0.69"
