[package]
name = "tf-bindgen-codegen"
version = "0.1.0"
edition = "2021"
description = "A collection of proc-macros to improve tf-bindgen code."
license = "BSD-3-Clause"
repository = "https://github.com/robert-oleynik/tf-bindgen"
readme = "../../README.md"
keywords = ["tf-bindgen", "terraform", "macros"]
categories = ["configuration"]

[lib]
proc-macro = true

[dependencies]
darling = "0.14.4"
heck = "0.4.1"
quote = "1.0.26"
syn = { version = "1.0.91", features = ["derive", "full"] }
