[package]
name = "tf-bindgen-core"
version = "0.1.0"
edition = "2021"
description = "Traits and structures used by tf-bindgen's generated code."
license = "BSD-3-Clause"
repository = "https://github.com/robert-oleynik/tf-bindgen"
readme = "../../README.md"
keywords = ["tf-bindgen"]
categories = ["config"]

[dependencies]
sha1 = "0.10.5"
tf-bindgen-schema = { version = "0.1.0", path = "../schema" }
